[package]
name = "acme-tls-alpn-01"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

[dependencies.ring]
version = "0.17"
default-features = false
features = ["std","alloc"]

[dependencies.base64]
version = "0.21"
default-features = false
features = ["std","alloc"]

[dependencies.serde]
version = "1.0"
features = ["std","alloc","derive"]

[dependencies.serde_json]
version = "1.0"
default-features = false
features = ["std","alloc"]

[dependencies.futures]
version = "0.3"
default-features = false
features = ["std","alloc"]

[dependencies.futures-timer]
version = "3.0"
default-features = false
features = []

[dependencies.flume]
version = "0.11"
default-features = false
features = ["async"]

[dependencies.flashmap]
version = "0.1"
default-features = false
features = ["default"]

[dependencies.rcgen]
version = "0.12"
default-features = false
features = ["ring","pem"]

[dependencies.pem]
version = "3.0"
default-features = false
features = ["std"]

[dependencies.rustls]
version = "0.22"
default-features = false
features = ["ring"]

#[dependencies.postage]
#version = "0.5"
#default-features = false
#features = ["futures-traits"]

[dependencies.reqwest]
optional = true
version = "0.11"
default-features = false
features = ["json", "rustls-tls"]

[dev-dependencies.tokio]
version = "1.35"
default-features = false
features = ["net", "io-util", "rt-multi-thread", "macros"]

[dev-dependencies.tokio-rustls]
version = "0.25"
default-features = false
features = ["ring"]

[features]
default = ["reqwest"]
reqwest = ["dep:reqwest"]

[[example]]
name = "renew"
required-features = ["reqwest"]
